FIX render_actions create new dash tile when on featured collections CHG format code so it is more readable ADD language string for Actions label

--- a/css/global.css
+++ b/css/global.css
@@ -991,6 +991,14 @@ div.video-js {margin:auto;}
 	margin: 10px 0px;
 }
 
+.ListTools .ActionsContainer select {
+	width: 150px !important; /*not permanent...until we get out of bug fix period*/
+}
+
+.ListTools .ActionsContainer .DropdownActionsLabel {
+	display: none;
+}
+
 /* Drag & Drop */
 #CentralSpaceResourceClone, #CollectionSpaceClone {
 	text-align: left;
